apps/immich/1-immich-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  labels:
    app: immich-machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      runtimeClassName: nvidia
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.1
          ports:
            - containerPort: 3003
              name: http
          volumeMounts:
            - name: ml-cache
              mountPath: /cache
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 4000m
              memory: 4Gi
      volumes:
        - name: ml-cache
          persistentVolumeClaim:
            claimName: immich-ml-cache
