apps/immich/1-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
spec:
  selector:
    matchLabels:
      app: immich-postgres
  serviceName: immich-postgres
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Retain
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          command:
            - postgres
            - -c
            - shared_preload_libraries=vectors.so
            - -c
            - search_path=$$user, public, vectors
            - -c
            - logging_collector=on
            - -c
            - max_wal_size=2GB
            - -c
            - shared_buffers=512MB
            - -c
            - wal_compression=on
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: immich-postgres
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 2Gi
          livenessProbe:
            exec:
              command:
                - pg_isready
                - --dbname=immich
                - --username=postgres
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            exec:
              command:
                - pg_isready
                - --dbname=immich
                - --username=postgres
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 128Mi
  volumeClaimTemplates:
    - metadata:
        name: immich-postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: maru-nfs-csi
        resources:
          requests:
            storage: 20Gi
