apps/immich/1-valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  labels:
    app: immich-valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-valkey
  template:
    metadata:
      labels:
        app: immich-valkey
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:9
          ports:
            - containerPort: 6379
              name: redis
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
