apps/immich/2-immich-ml-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
spec:
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
      name: http
