apps/immich/2-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
spec:
  selector:
    app: immich-postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
