apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    tailscale.com/proxy-group: web-proxies
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - immich
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 2283
